# books_Software_Engineering_for_Data_Scientists

./: .gitignore  pyproject.toml
ch01/: 01_what_is_good_coods.ipynb
ch02/: ch02_Performance_Analysis.ipynb  mode_using_counter.py  time_mode.py
ch03/: ch03_Data_Structure.ipynb
ch04/: ch04_Object-Oriented_Programming_and_Functional_Programming.ipynb
ch05/: ch05_error_log_debug.ipynb
ch06/: ch06_code_format_linting_typecheck.ipynb
