[project]
name = "books-software-engineering-for-data-scientists"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "dask>=2025.11.0",
    "faker>=38.2.0",
    "fastapi>=0.123.5",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "jupyterlab-code-formatter>=3.0.2",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.7",
    "memray>=1.19.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "snakeviz>=2.2.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
]
